# hammingbird

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  README.md
.github/workflows/: wheels.yml
code/demo/: README.md  RUN_ORDER.md  app.py  bench_threads.py  datasets.py  gen_real_phashes.py  methods.py  presets.py
code/python/hammingbird_ref/: __init__.py  core.py  test.py
code/rust/: Cargo.toml  README.md
code/rust/hammingbird-core/: Cargo.toml
code/rust/hammingbird-core/src/: lib.rs
code/rust/hammingbird-py/: Cargo.toml  README.md  pyproject.toml
code/rust/hammingbird-py/python/hammingbird/: __init__.py
code/rust/hammingbird-py/src/: lib.rs
logs/demo/results_2026_05_28/: README.md
logs/demo/results_2026_05_28/csv_session_snapshots/: 01_round1_complete_scaling.csv  02_round2_through_preset13.csv  03_widehash_d512_d1024.csv  04_widehash_plus_v044_sanity.csv  05_cross_join_clustered_and_phash.csv
logs/demo/results_2026_05_28/json/: 20260528_182048_01_sanity.json  20260528_182147_02_real_phash.json  20260528_182207_03_adaptive_structured.json  20260528_182225_04_high_k_fix.json  20260528_182258_05_scaling_curve.json  20260528_182346_06_ann_libraries_clustered.json  20260528_183751_07_stress.json  20260528_185506_05_scaling_curve.json  20260528_185658_02_real_phash.json  20260528_185734_06_ann_libraries_clustered.json  20260528_191331_07_stress.json  20260528_192530_10_streaming_index.json  20260528_193101_12_ann_tuned_high_recall.json  20260528_194106_08_clustered_scaling.json  20260528_200045_11_exact_dedup.json  20260528_203016_13_pigeon_at_the_limit.json  20260528_204755_09_wide_hashes.json  20260528_204838_14_face_embedding_width.json  20260528_204856_01_sanity.json  20260528_210313_15_cross_join_clustered.json  20260528_210334_16_cross_join_phash.json  20260528_210639_bench_threads.json  20260528_211055_bench_threads.json
